--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graph-tea",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "tea",
   "main": "index.js",
   "scripts": {
@@ -13,5 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "cowsay": "^1.6.0"
+  },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/lzgblog/graph-tea.git"
   }
 }
